tests/ui/suggestions/silenced-binding-typo.stderr
error[E0425]: cannot find value `x` in this scope
  --> $DIR/silenced-binding-typo.rs:4:14
   |
LL |     let _x = 42;
   |         -- `_x` defined here
LL |     let _y = x;
   |              ^
   |
help: the leading underscore in `_x` marks it as unused, consider renaming it to `x`
   |
LL -     let _x = 42;
LL +     let x = 42;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0425`.
